@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.5 ]---------------
 
+2005-08-22  Erik Grinaker <erikg@codepoet.no>
+
+	* added Password Safe 1.x importer
+
 2005-08-17  Erik Grinaker <erikg@codepoet.no>
 
 	* default lock timeout for applet set to 10 minutes
